# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.minimal  recipe.json  spec.yaml
configuration/: base.yaml
logs/: pre_tool_use.json
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/domain/logs/: pre_tool_use.json
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs
