[package]
name = "zero2prod"
edition = "2024"
version = "0.0.1"

[dependencies]
actix-web = "4.11.0"
chrono = "0.4.41"
config = "0.14"
env_logger = "0.11"
log = "0.4"
reqwest = "0.12.22"
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
serde-aux = "4"

[dependencies.secrecy]
version = "0.8"
features = ["serde"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.sqlx]
version = "0.8.6"
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]
default-features = false

[dependencies.tokio]
version = "1.47.1"
features = ["rt", "rt-multi-thread", "macros"]

[dependencies.tracing]
version = "0.1"
features = ["log"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["registry", "env-filter"]

[dependencies.uuid]
version = "1.18.0"
features = ["v4"]

[[bin]]
path = "src/main.rs"
name = "zero2prod"
plugin = false
proc-macro = false
edition = "2024"
required-features = []

[[test]]
path = "tests/health_check.rs"
name = "health_check"
plugin = false
proc-macro = false
edition = "2024"
required-features = []

[lib]
path = "src/lib.rs"
name = "zero2prod"
plugin = false
proc-macro = false
edition = "2024"
required-features = []
crate-type = ["lib"]
